--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.cardModified{
+  width: 18rem;
+}
