Adding insertion to the cart

--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -17,10 +17,23 @@ code {
 }
 
 .item-right {
-  margin-left: 800px;
+  margin-left: 400px;
 }
 
 .imagen-productos {
   width: auto;
   height: 200px;
+}
+
+.card-center {
+  text-align: center;
+}
+
+.drop-login {
+  width: 250px;
+}
+
+.imgLogo{
+  width: 30px;
+  margin-right: 20px;
 }
